--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -802,6 +802,12 @@
     <string name="add">যোগ করুন</string>
     <string name="select_amp_delete"><![CDATA[Select & Delete]]></string>
     <string name="title">শিরোনাম লিখুন</string>
+    <string name="bhagavad_gita">Bhagavad Gita</string>
+    <string name="more">More</string>
+    <string name="mytube">MyTube</string>
+    <string name="bani_in_sms">Bani In SMS</string>
+    <string name="news">NEWS</string>
+    <string name="om">তৎ সৎ</string>
 
 
 </resources>
